Edited Travel Done by Shirdika

--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -33,7 +33,7 @@
     </tr>
     <tr>
         <td><input type="button" style="height:50px;width:200px" title="Commission" value="Commission" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Commissions")'" /></td>
-        <td><input type="button" style="height:50px;width:200px" title="View Travel Code" value="View Travel Code" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "ManageTravel")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="View Travel Code" value="View Travel Code" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Travel")'" /></td>
         <td><input type="button" style="height:50px;width:200px" title="Send Newsletter" value="Send Newsletter" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "SendMailer")'" /></td>
     </tr>
     <tr>
