--- a/TSAR/Views/Clients/Create.cshtml
+++ b/TSAR/Views/Clients/Create.cshtml
@@ -97,6 +97,24 @@
         </div>
         <div class="form-group">
             <div align="center">
+                @Html.LabelFor(model => model.Distance, htmlAttributes: new { @class = "control-label", style = "display: none;" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                @Html.EditorFor(model => model.Distance, new { htmlAttributes = new { @class = "form-control", @Id="Distance", style = "display: none;" } })
+                @Html.ValidationMessageFor(model => model.Distance, "", new { @class = "text-danger", style = "display: none;" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.Distance2, htmlAttributes: new { @class = "control-label", style = "display: none;" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                @Html.EditorFor(model => model.Distance2, new { htmlAttributes = new { @class = "form-control", @Id = "Distance2", style = "display: none;" } })
+                @Html.ValidationMessageFor(model => model.Distance2, "", new { @class = "text-danger", style = "display: none;" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div align="center">
                 @Html.LabelFor(model => model.ContactNumber2, htmlAttributes: new { @class = "control-label" })
             </div>
             <div class="col-md-4 col-md-offset-4">
@@ -131,32 +149,9 @@
 
         </div>
         
-        <div class="form-group">
-            @Html.LabelFor(model => model.Distance, htmlAttributes: new { @class = "control-label col-md-2", style = "display: none;" })
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.Distance, new { htmlAttributes = new { @class = "form-control", @id = "Distance", style = "display: none;" } })
-                @Html.ValidationMessageFor(model => model.Distance, "", new { @class = "text-danger", style = "display: none;" })
+        
 
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Distance2, htmlAttributes: new { @class = "control-label col-md-2", style = "display: none;" })
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.Distance2, new { htmlAttributes = new { @class = "form-control", @id = "Distance2", style = "display: none;" } })
-                @Html.ValidationMessageFor(model => model.Distance2, "", new { @class = "text-danger", style = "display: none;" })
-
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.ProjectLeader, htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.ProjectLeader, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProjectLeader, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        
 
 
     </div>
@@ -164,9 +159,8 @@
         <div align="center">
 
             <input type="checkbox" value="Get Route" onclick="GetRoute()" , /> Add Travel
-            <br/>
-            <input type="checkbox" value="Get Route" onclick="GetRoute1()" , /> Add Travel 2
-            <br/>
+            <br />
+            <input type="checkbox" value="Get Route" onclick="GetRoute1()" , /> Add Travel2
         </div>
         <div align="center">
 
@@ -202,6 +196,166 @@
 }
 
 @*Maps code*@
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAmwokcf-w9HRliiKKP_SZBfOGy5ZjlGtE" type="text/javascript"></script>
+
+
+<script>
+
+
+    var source, destination;
+    var directionsDisplay;
+    var directionsService = new google.maps.DirectionsService();
+
+
+    var map = new google.maps.Map(document.getElementById('dvMap'),
+    {
+        center: { lat: 50.834697, lng: -0.773792 },
+        zoom: 13,
+        mapTypeId: 'roadmap'
+    });
+
+    google.maps.event.addDomListener(window,
+        'load',
+        function () {
+            new google.maps.places.SearchBox(document.getElementById('travelfrom'));
+            new google.maps.places.SearchBox(document.getElementById('ClientAddress'));
+            directionsDisplay = new google.maps.DirectionsRenderer({ 'draggable': true });
+        });
+
+    function GetRoute() {
+
+        directionsDisplay.setMap(map);
+
+        source = document.getElementById("travelfrom").value;
+        destination = document.getElementById("ClientAddress").value;
+
+        var request = {
+            origin: source,
+            destination: destination,
+            travelMode: google.maps.TravelMode.DRIVING
+        };
+
+        directionsService.route(request,
+            function (response, status) {
+                if (status == google.maps.DirectionsStatus.OK) {
+                    directionsDisplay.setDirections(response);
+                }
+            });
+
+
+        //calls distanceMatrixand calculates distance
+        var service = new google.maps.DistanceMatrixService();
+        service.getDistanceMatrix({
+                origins: [source],
+                destinations: [destination],
+                travelMode: google.maps.TravelMode.DRIVING,
+                unitSystem: google.maps.UnitSystem.METRIC,
+                avoidHighways: false,
+                avoidTolls: false
+            },
+            function (response, status) {
+
+                if (status == google.maps.DistanceMatrixStatus.OK &&
+                    response.rows[0].elements[0].status != "ZERO_RESULTS") {
+                    var distance = response.rows[0].elements[0].distance.text;
+
+                    document.getElementById("Distance").value = distance;
+
+                    //The distance is worked out and sent to a textbox, where it is then saved to the model
+
+
+
+                } else {
+                    alert("Unable to find the distance via road.");
+                }
+            });
+
+
+
+
+
+    }
+
+</script>
+
+<script>
+
+
+    var source, destination;
+    var directionsDisplay;
+    var directionsService = new google.maps.DirectionsService();
+
+
+    var map = new google.maps.Map(document.getElementById('dvMap1'),
+    {
+        center: { lat: 50.834697, lng: -0.773792 },
+        zoom: 13,
+        mapTypeId: 'roadmap'
+    });
+
+    google.maps.event.addDomListener(window,
+        'load',
+        function () {
+            new google.maps.places.SearchBox(document.getElementById('travelfrom'));
+            new google.maps.places.SearchBox(document.getElementById('ClientAddress2'));
+            directionsDisplay = new google.maps.DirectionsRenderer({ 'draggable': true });
+        });
+
+    function GetRoute1() {
+
+        directionsDisplay.setMap(map);
+
+        source = document.getElementById("travelfrom").value;
+        destination = document.getElementById("ClientAddress2").value;
+
+        var request = {
+            origin: source,
+            destination: destination,
+            travelMode: google.maps.TravelMode.DRIVING
+        };
+
+        directionsService.route(request,
+            function (response, status) {
+                if (status == google.maps.DirectionsStatus.OK) {
+                    directionsDisplay.setDirections(response);
+                }
+            });
+
+
+        //calls distanceMatrixand calculates distance
+        var service = new google.maps.DistanceMatrixService();
+        service.getDistanceMatrix({
+                origins: [source],
+                destinations: [destination],
+                travelMode: google.maps.TravelMode.DRIVING,
+                unitSystem: google.maps.UnitSystem.METRIC,
+                avoidHighways: false,
+                avoidTolls: false
+            },
+            function (response, status) {
+
+                if (status == google.maps.DistanceMatrixStatus.OK &&
+                    response.rows[0].elements[0].status != "ZERO_RESULTS") {
+                    var distance = response.rows[0].elements[0].distance.text;
+
+                    document.getElementById("Distance2").value = distance;
+
+                    //The distance is worked out and sent to a textbox, where it is then saved to the model
+
+
+
+                } else {
+                    alert("Unable to find the distance via road.");
+                }
+            });
+
+
+
+
+
+    }
+
+</script>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAmwokcf-w9HRliiKKP_SZBfOGy5ZjlGtE" type="text/javascript"></script>
 
 
