--- a/TSAR/Views/Clients/Edit.cshtml
+++ b/TSAR/Views/Clients/Edit.cshtml
@@ -87,7 +87,7 @@
         </div>
 
 
-        <div class="form-group">
+        @*<div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.ProjectLeader, htmlAttributes: new { @class = "control-label" })
             </div>
@@ -95,18 +95,10 @@
                 @Html.EditorFor(model => model.ProjectLeader, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProjectLeader, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
 
-        <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.TravelCode, "TravelCode", htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                @Html.DropDownList("TravelCode", null, "---Select New---", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TravelCode, "", new { @class = "text-danger" })
-            </div>
-        </div>
+      
 
 
 
