--- a/TSAR/Views/Travel/Delete.cshtml
+++ b/TSAR/Views/Travel/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TSAR.Models.ManageTravel
+﻿@model TSAR.Models.Travel
 
 @{
     ViewBag.Title = "Delete";
@@ -9,15 +9,31 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ManageTravel</h4>
+    <h4>Travel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Rate)
+            @Html.DisplayNameFor(model => model.Client.ClientName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Rate)
+            @Html.DisplayFor(model => model.Client.ClientName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ClientAddress)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ClientAddress)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TravelRate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TravelRate)
         </dd>
 
         <dt>
