--- a/TSAR/Views/Consultants/Create.cshtml
+++ b/TSAR/Views/Consultants/Create.cshtml
@@ -30,11 +30,23 @@
             <div align="center">
                 @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label" })
             </div>
-                <div class="col-md-4 col-md-offset-4">
-                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-                </div>
+            <div class="col-md-4 col-md-offset-4">
+                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
             </div>
+        </div>
+        
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                @*@Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })*@
+                <input type="radio" name="Gender" value="Female" checked>Female<br/>
+                <input type="radio" name="Gender" value="Male" checked>Male<br />
+            </div>
+        </div>
 
         <div class="form-group">
             <div align="center">
