--- a/TSAR/Views/Leaves/Create.cshtml
+++ b/TSAR/Views/Leaves/Create.cshtml
@@ -18,80 +18,27 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @Value = @User.Identity.GetUserName() } })
+            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @Value = User.Identity.GetUserName() } })
                 @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
             </div>
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.ApprovedBy, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ApprovedBy, new { htmlAttributes = new { @class = "form-control", @Value = User.Identity.GetUserName() } })
+                @Html.ValidationMessageFor(model => model.ApprovedBy, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
         @if (User.IsInRole("Admin"))
         {
             <div class="form-group">
-                <div align="center">
-                    @Html.LabelFor(model => model.ApprovedBy, htmlAttributes: new { @class = "control-label" })
-                </div>
-                <div class="col-md-4 col-md-offset-4">
-                    @Html.EditorFor(model => model.ApprovedBy, new {htmlAttributes = new {@class = "form-control", @Value = @User.Identity.GetUserName()}})
-                    @Html.ValidationMessageFor(model => model.ApprovedBy, "", new {@class = "text-danger"})
-                </div>
-            </div>
-        }
-
-            @*@if (User.IsInRole("Admin"))
-            {
-                <div class="form-group">
-                    <div align="center">
-                        @Html.LabelFor(model => model.IsConfirmed, htmlAttributes: new { @class = "control-label" })
-                    </div>
-                    <div class="col-md-4 col-md-offset-4">
-                        <div class="checkbox">
-                            @Html.EditorFor(model => model.IsConfirmed)
-                            @Html.ValidationMessageFor(model => model.IsConfirmed, "", new {@class = "text-danger"})
-                        </div>
-                    </div>
-                </div>
-            }*@
-
-        <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.LeaveDecsription, htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.LeaveDecsription, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.LeaveDecsription, "", new {@class = "text-danger"})
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.LeaveDate, htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.LeaveDate, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.LeaveDate, "", new {@class = "text-danger"})
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.ReturnDate, htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.ReturnDate, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.ReturnDate, "", new {@class = "text-danger"})
-            </div>
-        </div>
-        
-        @if (User.IsInRole("Admin"))
-        {
-            <div class="form-group">
-                <div align="center">
-                    @Html.LabelFor(model => model.IsConfirmed, htmlAttributes: new { @class = "control-label" })
-                </div>
-                <div class="col-md-4 col-md-offset-4">
+                @Html.LabelFor(model => model.IsConfirmed, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
                     <div class="checkbox">
                         @Html.EditorFor(model => model.IsConfirmed)
                         @Html.ValidationMessageFor(model => model.IsConfirmed, "", new { @class = "text-danger" })
@@ -100,22 +47,103 @@
             </div>
         }
 
+        @*<div class="form-group">
+                @Html.LabelFor(model => model.LeaveDecsription, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.LeaveDecsription, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.LeaveDecsription, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
+
         <div class="form-group">
-            <div align="center">
-                @*<div class="col-md-offset-2 col-md-10">*@
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                @*</div>*@
+            @Html.LabelFor(model => model.AccumulatedLeave, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*<div class="col-md-10">
+                @Html.EditorFor(model => model.AccumulatedLeave, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.AccumulatedLeave, "", new { @class = "text-danger" })
+            </div>*@
+            <div class="form-group">
+                @Html.TextBoxFor(model => model.AccumulatedLeave)
             </div>
         </div>
+        
+        
+        @*@for (int i = 0; i <= Model.Count(); i++)
+        {
+            
+        }*@
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.LeaveDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LeaveDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LeaveDate, "", new { @class = "datemustbeequalorgreaterthancurrentdate" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ReturnDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ReturnDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ReturnDate, "", new { @class = "datemustbeequalorgreaterthancurrentdate" })
+            </div>
+        </div>
+
+
+
+        @*<div class="form-group">
+                @Html.LabelFor(model => model.LeaveTypeId, "Leave Type", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("LeaveTypeId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.LeaveTypeId, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
+        
+        <label>Leave Type</label>
+            @if (User.Identity.Name == "Male")  @*I'm sure this is not supposed to be User.Identity.Name == "Male"*@
+                {
+
+                @Html.DropDownList("LeaveTypes", new List<SelectListItem>
+                    {
+                        new SelectListItem{ Text="Annual", Value = "1"},
+                        new SelectListItem{ Text="Sick", Value = "2" },
+                        new SelectListItem{ Text="Family Resonsibilty", Value = "3" },
+                        new SelectListItem{ Text="Compassionate", Value = "4" },
+                        new SelectListItem{ Text="Paternity", Value = "5" },
+                        new SelectListItem{ Text="Disability", Value = "6" },
+                        new SelectListItem{ Text="Study", Value = "7" },
+                        new SelectListItem{ Text="Religious", Value = "8" },
+
+                    })
+            }
+            else
+            {
+                @Html.DropDownList("LeaveTypes", new List<SelectListItem>
+                    {
+                        new SelectListItem{ Text="Annual", Value = "1"},
+                        new SelectListItem{ Text="Sick", Value = "2" },
+                        new SelectListItem{ Text="Family Resonsibilty", Value = "3" },
+                        new SelectListItem{ Text="Compassionate", Value = "4" },
+                        new SelectListItem{ Text="Maternity", Value = "5" },
+                        new SelectListItem{ Text="Disability", Value = "6" },
+                        new SelectListItem{ Text="Study", Value = "7" },
+                        new SelectListItem{ Text="Religious", Value = "8" },
+
+                    })
+            }
+        
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </div>
         </div>
 }
 
-<div align="center">
-    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
-</div>
-@*<div>
+<div>
     @Html.ActionLink("Back to List", "Index")
-</div>*@
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
