--- a/TSAR/Views/Leaves/Edit.cshtml
+++ b/TSAR/Views/Leaves/Edit.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>Leave</h4>
         <hr />
@@ -19,105 +19,82 @@
         @Html.HiddenFor(model => model.LeaveId)
 
         <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label" })
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.FirstName, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.FirstName, "", new {@class = "text-danger"})
+            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        @if (User.IsInRole("Admin"))
-        {
-            <div class="form-group">
-                <div align="center">
-                    @Html.LabelFor(model => model.ApprovedBy, htmlAttributes: new { @class = "control-label" })
-                </div>
-                    <div class="col-md-4 col-md-offset-4">
-                        @Html.EditorFor(model => model.ApprovedBy, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.ApprovedBy, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-        }
-
-        @*@if (User.IsInRole("Admin"))
-        {
-            <div class="form-group">
-                <div align="center">
-                    @Html.LabelFor(model => model.IsConfirmed, htmlAttributes: new { @class = "control-label" })
-                </div>
-                    <div class="col-md-4 col-md-offset-4">
-                        <div class="checkbox">
-                            @Html.EditorFor(model => model.IsConfirmed)
-                            @Html.ValidationMessageFor(model => model.IsConfirmed, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-        }*@
+        <div class="form-group">
+            @Html.LabelFor(model => model.ApprovedBy, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ApprovedBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ApprovedBy, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.LeaveDecsription, htmlAttributes: new { @class = "control-label" })
-            </div>
-                <div class="col-md-4 col-md-offset-4">
-                    @Html.EditorFor(model => model.LeaveDecsription, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LeaveDecsription, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.IsConfirmed, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.IsConfirmed)
+                    @Html.ValidationMessageFor(model => model.IsConfirmed, "", new { @class = "text-danger" })
                 </div>
             </div>
+        </div>
 
         <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.LeaveDate, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.LeaveDecsription, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LeaveDecsription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LeaveDecsription, "", new { @class = "text-danger" })
             </div>
-                <div class="col-md-4 col-md-offset-4">
-                    @Html.EditorFor(model => model.LeaveDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LeaveDate, "", new { @class = "text-danger" })
-                </div>
-            </div>
+        </div>
 
         <div class="form-group">
-            <div align="center">
-                @Html.LabelFor(model => model.ReturnDate, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.AccumulatedLeave, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.AccumulatedLeave, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.AccumulatedLeave, "", new { @class = "text-danger" })
             </div>
-            <div class="col-md-4 col-md-offset-4">
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.LeaveDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LeaveDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LeaveDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ReturnDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
                 @Html.EditorFor(model => model.ReturnDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ReturnDate, "", new { @class = "text-danger" })
             </div>
         </div>
-        
-        @if (User.IsInRole("Admin"))
-        {
-            <div class="form-group">
-                <div align="center">
-                    @Html.LabelFor(model => model.IsConfirmed, htmlAttributes: new { @class = "control-label" })
-                </div>
-                <div class="col-md-4 col-md-offset-4">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.IsConfirmed)
-                        @Html.ValidationMessageFor(model => model.IsConfirmed, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-        }
 
         <div class="form-group">
-            <div align="center">
-                @*<div class="col-md-offset-2 col-md-10">*@
-                <input type="submit" value="Save" class="btn btn-primary" />
-                @*</div>*@
-            </div>
+            @Html.LabelFor(model => model.LeaveTypeId, "LeaveTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("LeaveTypeId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.LeaveTypeId, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
 }
 
-
-<div align="center">
-    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
-</div>
-@*<div>
+<div>
     @Html.ActionLink("Back to List", "Index")
-</div>*@
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
