--- a/TSAR/Views/Timesheets/Details.cshtml
+++ b/TSAR/Views/Timesheets/Details.cshtml
@@ -74,7 +74,18 @@
         <dd>
             @Html.DisplayFor(model => model.Hours)
         </dd>
-
+        <dt>
+            @Html.DisplayNameFor(model => model.TicketReference)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.TicketReference)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.SignOff)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.SignOff)
+        </dd>
     </dl>
 </div>
 <p>
