--- a/TSAR/Views/Timesheets/Create.cshtml
+++ b/TSAR/Views/Timesheets/Create.cshtml
@@ -49,7 +49,7 @@
                 @Html.LabelFor(model => model.ActivityDescription, htmlAttributes: new { @class = "control-label" })
             </div>
                 <div class="col-md-4 col-md-offset-4">
-                    @Html.EditorFor(model => model.ActivityDescription, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.ActivityDescription, new { @class = "form-control"  })
                     @Html.ValidationMessageFor(model => model.ActivityDescription, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -70,7 +70,7 @@
             </div>
         </div>*@
 
-        <div class="form-group">
+        @*<div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.Id, "Client Name", htmlAttributes: new { @class = "control-label" })
             </div>
@@ -88,7 +88,7 @@
                 @Html.DropDownList("ConsultantNum",null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
         @*<div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.TicketReference, htmlAttributes: new { @class = "control-label" })
