--- a/TSAR/Views/Timesheets/Edit.cshtml
+++ b/TSAR/Views/Timesheets/Edit.cshtml
@@ -92,11 +92,36 @@
             <div align="center">
                 @Html.LabelFor(model => model.ConsultantNum, "Consultant Name", htmlAttributes: new { @class = "control-label" })
             </div>
-                <div class="col-md-4 col-md-offset-4">
-                    @Html.DropDownList("ConsultantNum", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
-                </div>
+            <div class="col-md-4 col-md-offset-4">
+                @Html.DropDownList("ConsultantNum", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
             </div>
+        </div>
+        
+
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.TicketReference, htmlAttributes: new { @class = "control-label" })
+            </div>
+
+            <div class="col-md-4 col-md-offset-4">
+                @Html.EditorFor(model => model.TicketReference, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TicketReference, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
+
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.SignOff, htmlAttributes: new { @class = "control-label" })
+            </div>
+
+            <div class="col-md-4 col-md-offset-4">
+              
+                @Html.ValidationMessageFor(model => model.SignOff, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
 
         <div class="form-group">
             
