add manager button for TS history

--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -43,7 +43,7 @@
 
     </tr>
     <tr>
-        <td></td>
+        <td><input type="button" style="height:50px;width:200px" title="Timesheet History" value="Timesheet History" class="btn btn-primary" onclick="location.href='@Url.Action("History", "TimeSheetHistory")'" /></td>
         <td></td>
         <td><input type="button" style="height:50px;width:200px" title="Calendar" value="Calendar" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Calendar")'" /></td>
     </tr>
