--- a/TSAR/Views/TimeSheetHistory/History.cshtml
+++ b/TSAR/Views/TimeSheetHistory/History.cshtml
@@ -9,8 +9,13 @@
 }
 
 
-
-<h2>Timesheet Histroy</h2>
+<br/>
+<br/>
+<br/>
+<h2>Timesheet History</h2>
+<br/>
+<br/>
+<br/>
 <p>
     @using (Html.BeginForm())
     {
@@ -60,6 +65,7 @@
 <div class="table">
 
     <link href="~/Content/Gridmvc.css" rel="stylesheet" />
+    @*<link href="~/css/agency.css" rel="stylesheet" />*@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/gridmvc.min.js"></script>
