--- a/TSAR/Views/Timesheets/ViewTimeheets.cshtml
+++ b/TSAR/Views/Timesheets/ViewTimeheets.cshtml
@@ -5,11 +5,11 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>ViewTimeheets</h2>
+<h2>Sign Off Timeheets</h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
-</p>
+</p>*@
 
 <table class="table">
     <tr>
