--- a/TSAR/Views/Manage/ClientMenu.cshtml
+++ b/TSAR/Views/Manage/ClientMenu.cshtml
@@ -12,8 +12,12 @@
         <tr>
             <td><input type="button" style="height:50px;width:200px" title="Create Ticket" value="Create Ticket" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Tickets")'" /></td>            
         </tr>
-        <tr>            
-            <td><input type="button" style="height:50px;width:200px" title="Rate Consultant" value="Rate Consultant" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Rating")'" /></td>
+    <tr>            
+        <td><input type="button" style="height:50px;width:200px" title="Rate Consultant" value="Rate Consultant" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Rating")'" /></td>
+    </tr>
+        
+        <tr>
+            <td><input type="button" style="height:50px;width:200px" title="Sign Off Timesheet" value="Sign Off Timesheet" class="btn btn-primary" onclick="location.href='@Url.Action("ViewTimeheets", "Timesheets")'" /></td>
         </tr>
     </tbody>
 </table>
