--- a/TSAR/Views/Timesheets/SignOff.cshtml
+++ b/TSAR/Views/Timesheets/SignOff.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>SignOff</h2>
+<h2>Sign Off</h2>
 
 
 @using (Html.BeginForm())
@@ -103,13 +103,13 @@
 
     </div>
 
-        <div class="form-group">
-            @*@Html.LabelFor(model => model.CaptureDate, htmlAttributes: new { @class = "control-label col-md-2" })*@
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CaptureDate, new { htmlAttributes = new { @class = "form-control",@type="hidden" } })
-                @*@Html.ValidationMessageFor(model => model.CaptureDate, "", new { @class = "text-danger" })*@
-            </div>
+    <div class="form-group">
+        @*@Html.LabelFor(model => model.CaptureDate, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.CaptureDate, new { htmlAttributes = new { @class = "form-control", @type = "hidden" } })
+            @*@Html.ValidationMessageFor(model => model.CaptureDate, "", new { @class = "text-danger" })*@
         </div>
+    </div>
 
         <div class="form-group">
             @*@Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })*@
@@ -188,16 +188,23 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="col-md-4 col-md-offset-4">
+                <input type="submit" value="Save" class="btn btn-primary" />
+               
             </div>
+            
         </div>
-    
+        <br />
+        <br />
+        <div class="col-md-4 col-md-offset-4">
+            <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
+        </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
+@*@Html.ActionLink("Back to List", "Index")*@
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
