Edit to Client Timesheet views Done by Jono Project Model,Controller And views Done by Shirdika

--- a/TSAR/Views/Files/Index.cshtml
+++ b/TSAR/Views/Files/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Files</h2>
 <p>
     <div align="center">
         <a id="button" href="@Url.Action("Create")" class="btn btn-primary">Create</a>
