--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -31,11 +31,13 @@
         <td><input type="button" style="height:50px;width:200px" title="Budget" value="Budget" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Budget")'" /></td>
         <td><input type="button" style="height:50px;width:200px" title="IM Dashboard" value="IM Dashboard" class="btn btn-primary" onclick="location.href='@Url.Action("Dashboard", "Dashboard")'" /></td>
     </tr>
-    <tr>
-        <td><input type="button" style="height:50px;width:200px" title="Commission" value="Commission" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Commissions")'" /></td>
-        <td><input type="button" style="height:50px;width:200px" title="View Travel Code" value="View Travel Code" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Travel")'" /></td>
-        <td><input type="button" style="height:50px;width:200px" title="Send Newsletter" value="Send Newsletter" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "SendMailer")'" /></td>
-    </tr>
+        <tr>
+            <td><input type="button" style="height:50px;width:200px" title="Commission" value="Commission" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Commissions")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="View Travel Code" value="View Travel Code" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Travel")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="Send Newsletter" value="Send Newsletter" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "SendMailer")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="View Projects" value="View Projects" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Projects")'" /></td>
+
+        </tr>
     <tr>
         <td><input type="button" style="height: 50px; width: 200px" title="Leave Requests" value="Leave Requests" class="btn btn-primary" onclick="location.href = '@Url.Action("Index", "Leaves")'"/></td>
         <td></td>
