--- a/TSAR/Views/Timesheets/SignOff.cshtml
+++ b/TSAR/Views/Timesheets/SignOff.cshtml
@@ -197,7 +197,7 @@
         <br />
         <br />
         <div class="col-md-4 col-md-offset-4">
-            <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
+            <a id="button" href="@Url.Action("ViewTimeheets")" class="btn btn-primary">Back To List</a>
         </div>
 }
 
