--- a/TSAR/Views/Clients/Index.cshtml
+++ b/TSAR/Views/Clients/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Index</h2>
+<h2>List of Clients</h2>
 <p>
     @using (Html.BeginForm("Index", "Clients", FormMethod.Get))
     {
