--- a/TSAR/Views/Tickets/MyTickets.cshtml
+++ b/TSAR/Views/Tickets/MyTickets.cshtml
@@ -24,7 +24,7 @@
 </script>
 @using (@Html.BeginForm())
 {
-    <b>Ticket Ref:</b>
+    <b>Ticket Reference:</b>
     <font color="black">@Html.TextBox("searchTerm", null, new { @id = "txtSearch" })</font> 
     <input type="submit" value="Search" class="btn btn-primary"/>
 }
