--- a/TSAR/Views/Travel/Delete.cshtml
+++ b/TSAR/Views/Travel/Delete.cshtml
@@ -21,11 +21,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ClientAddress)
+            @Html.DisplayNameFor(model => model.MClientAddress)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ClientAddress)
+            @Html.DisplayFor(model => model.MClientAddress)
         </dd>
 
         <dt>
