--- a/TSAR/Views/Travel/Index.cshtml
+++ b/TSAR/Views/Travel/Index.cshtml
@@ -18,7 +18,7 @@
             <font color="white">      @Html.DisplayNameFor(model => model.Client.ClientName)</font>
         </th>
         <th>
-            <font color="white">       @Html.DisplayNameFor(model => model.ClientAddress)</font>
+            <font color="white">       @Html.DisplayNameFor(model => model.MClientAddress)</font>
         </th>
        
         <th>
@@ -37,7 +37,7 @@
                 <font color="gold">     @Html.DisplayFor(modelItem => item.Client.ClientName)</font>
             </td>
             <td>
-                <font color="gold">       @Html.DisplayFor(modelItem => item.ClientAddress)</font>
+                <font color="gold">       @Html.DisplayFor(modelItem => item.MClientAddress)</font>
             </td>
            
             <td>
