--- a/TSAR/Views/Projects/Create.cshtml
+++ b/TSAR/Views/Projects/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TSAR.Models.Projects
+﻿+@model TSAR.Models.Projects
 
 @{
     ViewBag.Title = "Create";
@@ -27,7 +27,7 @@
 
         <div class="form-group">
             <div align="Center">
-                @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label col-md-2" })</div>
+                @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label" })</div>
                 <div class="col-md-4 col-md-offset-4">
                     @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
