--- a/TSAR/Views/Timesheets/Create.cshtml
+++ b/TSAR/Views/Timesheets/Create.cshtml
@@ -53,7 +53,15 @@
                     @Html.ValidationMessageFor(model => model.ActivityDescription, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+        @*<div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.MClientAddress, "Client Address", htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                @Html.DropDownList("Addresses", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.MClientAddress, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
         @*<div class="form-group">
             @Html.LabelFor(model => model.Total, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
