--- a/TSAR/Views/Timesheets/ViewTimeheets.cshtml
+++ b/TSAR/Views/Timesheets/ViewTimeheets.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Sign Off Timesheets</h2>
+<h2>Completed Timesheets</h2>
 
 @*<p>
     @Html.ActionLink("Create New", "Create")
@@ -97,3 +97,5 @@
     }
 
 </table>
+
+
