--- a/TSAR/Views/Travel/Edit.cshtml
+++ b/TSAR/Views/Travel/Edit.cshtml
@@ -30,7 +30,7 @@
 
         <div class="form-group">
             <div align="center">
-                @Html.LabelFor(model => model.ClientAddress, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.MClientAddress, htmlAttributes: new { @class = "control-label" })
             </div>
             <div class="col-md-4 col-md-offset-4">
                 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYt9as2cjmqUnGKD5POvx0xegcT_z40tw&libraries=places" />
@@ -54,10 +54,10 @@
                         });
                 </script>
 
-                @Html.EditorFor(model => model.ClientAddress, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.MClientAddress, new { htmlAttributes = new { @class = "form-control" } })
                 @*@Html.DropDownListFor(model => model.ClientAddress,new List<SelectListItem> { @ViewBag.Address}  ,"---Select---", new { @class = "form-control" })*@
 
-                @Html.ValidationMessageFor(model => model.ClientAddress, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.MClientAddress, "", new { @class = "text-danger" })
             </div>
 
         </div>
